--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <li><a href="/"></a>Ajuda</li>
                 </ul>
             </nav>
+            <script src="mobile-navbar.js"></script>
             <nav2>
                 <div class="sub-top-bar">
 
@@ -44,7 +45,12 @@
                 </div>
     
                 </nav2>
+
             <cont>
+                <div class="titulo-scroll-bar">
+                    <h1>Top semanal</h1>
+                    <h2>Ver tudo</h2>
+                </div>
                 <div class="main-scroll-div">
                     <div>
                         <button class="icon" onclick="scrollr()"> <img class="fas fa-angle-double-left" src="esquerda.svg"></i></button>
@@ -75,6 +81,6 @@
             </cont>
         </header>
         <main></main>
-        <script src="mobile-navbar.js"></script>
+
     </body>
     </html> 
