--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title>Navbar</title>
+        <title>Fresh Onion🧅</title>
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
@@ -32,6 +32,10 @@
                     <li><a href="/"></a>Novos</li>
                     <li><a href="/"></a>Ajuda</li>
                 </ul>
+                <div class="user">
+                    <img src="account_circle_FILL0_wght400_GRAD0_opsz48.png" alt="user-icon" height="30" width="30">
+                    <h1>login/sigin</h1>
+                </div>
             </nav>
             <script src="mobile-navbar.js"></script>
             <nav2>
@@ -53,13 +57,16 @@
                 </div>
                 <div class="main-scroll-div">
                     <div>
-                        <button class="icon" onclick="scrollr()"> <img class="fas fa-angle-double-left" src="esquerda.svg"></i></button>
+                        <button class="icon" onclick="scrollr()"> <img class= "icon-img" src="esquerda.svg"></i></button>
                     </div>
                     <div class = "cover">
                         <div class ="scroll-images">
                             <div class="child"><img class = "child-img" src="babydriver.png" alt="image"></div>
+                            <h1>Baby Driver</h1>
                             <div class="child"><img class = "child-img" src="babydriver.png" alt="image"></div>
+                            <h1>Baby Driver</h1>
                             <div class="child"><img class = "child-img" src="babydriver.png" alt="image"></div>
+                            <h1>Baby Driver</h1>
                             <div class="child"><img class = "child-img" src="babydriver.png" alt="image"></div>
                             <div class="child"><img class = "child-img" src="babydriver.png" alt="image"></div>
                             <div class="child"><img class = "child-img" src="babydriver.png" alt="image"></div>
@@ -75,7 +82,7 @@
                         </div>
                     </div>
                     <div>
-                        <button class="icon" onclick="scrolll()"> <img class="fas fa-angle-double-right" src="direita.svg"></i></button>
+                        <button class="icon" onclick="scrolll()"> <img class="icon-img" src="direita.svg"></i></button>
                     </div>
                 </div>
             </cont>
