página de filme

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </ul>
                 <div class="user">
                     <img src="account_circle_FILL0_wght400_GRAD0_opsz48.png" alt="user-icon" height="30" width="30">
-                    <h1>login/sigin</h1>
+                    <h1>login/sign</h1>
                 </div>
             </nav>
             <script src="mobile-navbar.js"></script>
