--- a/filme.html
+++ b/filme.html
@@ -32,10 +32,9 @@
                     <li><a href="">Novos</a></li>
                     <li><a href="">Ajuda</a></li>
                 </ul>
-                <div class="user">
-                    <img src="account_circle_FILL0_wght400_GRAD0_opsz48.png" alt="user-icon" height="30" width="30">
-                    <h1>Login/Sign</h1>
-                </div>
+                <a class="user" href="login.html">
+                    <h1>Login</h1>
+                </a>
             </nav>
             <script src="mobile-navbar.js"></script>
         </header>
@@ -79,7 +78,7 @@
             </section>
             <div class="comentarios">
                 <div class="header-comentarios">
-                    <p>ANALISES CRITICAS DE NEON GENESIS EVANGELION</p>
+                    <p>ANÁLISES CRÍTICAS DE NEON GENESIS EVANGELION</p>
                 </div>
                 <div class="comentarioAdd">
                     <div class="comentarioAdd-header">
