--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
                     <li><a href="/"></a>Novos</li>
                     <li><a href="/"></a>Ajuda</li>
                 </ul>
-                <div class="user">
-                    <img src="account_circle_FILL0_wght400_GRAD0_opsz48.png" alt="user-icon" height="30" width="30">
-                    <h1>login/sign</h1>
-                </div>
+                <a class="user" href="login.html">
+                    <h1>Login</h1>
+                </a>
             </nav>
             <script src="mobile-navbar.js"></script>
             <nav2>
