--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <body>
         <main id="container">
             <header id="header-logo">
-                <a href="" class="logo">
+                <a href="index.html" class="logo">
                     <img src="logo.png" alt="" class="logo">
                 </a>
             </header>
