--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title>Fresh Onion🧅</title>
+        <link rel="icon" href="icons/onion3.png">
+        <title>Fresh Onion</title>
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
@@ -11,13 +12,13 @@
             <nav>
                 </div>
                 <a class="logo" href="/">
-                    <img src="onion3.png" alt="onion" height="50" width="50">
+                    <img src="icons/onion3.png" alt="onion" height="50" width="50">
                     <h1>Fresh Onion</h1>
                 </a>
                 <div class="search-box">
                     <input type="text" class="search-txt" placeholder="pesquisar">
                     <a href="#" class="search-btn">
-                        <img src="loupe.svg" alt="Lupa" height="20" width="20">
+                        <img src="icons/loupe.svg" alt="Lupa" height="20" width="20">
                     </a>
                 </div>
                 <div class="mobile-menu">
@@ -32,43 +33,45 @@
                     <li><a href="/"></a>Novos</li>
                     <li><a href="/"></a>Ajuda</li>
                 </ul>
-                <a class="user" href="login.html">
-                    <h1>Login</h1>
-                </a>
+                <div class="user">
+                    <img src="icons/account_circle.png" href="login.html" alt="user-icon" height="30" width="30">
+                    <h1>login/sigin</h1>
+                </div>
             </nav>
             <script src="mobile-navbar.js"></script>
             <nav2>
                 <div class="sub-top-bar">
 
                     <ul class="sub-bar">
-                        <li><a href="/"><img class = "sub-icons" src="bug_report.svg" alt="icons"></a></li>
-                        <li><a href="/"><img class = "sub-icons" src="contact_mail.svg" alt="icons"></a></li>
-                        <li><a href="/"><img class = "sub-icons" src="photo_camera.svg" alt="icons"></a></li>
+                        <li><a href="/"><img class = "sub-icons" src="icons/bug_report.png" alt="icons"></a></li>
+                        <li><a href="/"><img class = "sub-icons" src="icons/contact_mail.png" alt="icons"></a></li>
+                        <li><a href="/"><img class = "sub-icons" src="icons/photo_camera.png" alt="icons"></a></li>
                     </ul>
                 </div>
     
                 </nav2>
 
             <cont>
+                <div class="lateral-bars">
+                    <div class="left"><h1></h1></div>
+                    <div class="right"><h1></h1></div>
+                </div>
                 <div class="titulo-scroll-bar">
                     <h1>Top semanal</h1>
                     <h2>Ver tudo</h2>
                 </div>
                 <div class="main-scroll-div">
                     <div>
-                        <button class="icon" onclick="scrollr()"> <img class= "icon-img" src="esquerda.svg"></i></button>
+                        <button class="icon" onclick="scrollr()"> <img class= "icon-img" src="icons/esquerda.svg"></i></button>
                     </div>
                     <div class = "cover">
                         <div class ="scroll-images">
-                            <div class="child"><img class = "child-img" src="babydriver.png" alt="image"></div>
-                            <h1>Baby Driver</h1>
-                            <div class="child"><img class = "child-img" src="babydriver.png" alt="image"></div>
-                            <h1>Baby Driver</h1>
-                            <div class="child"><img class = "child-img" src="babydriver.png" alt="image"></div>
-                            <h1>Baby Driver</h1>
-                            <div class="child"><img class = "child-img" src="babydriver.png" alt="image"></div>
-                            <div class="child"><img class = "child-img" src="babydriver.png" alt="image"></div>
-                            <div class="child"><img class = "child-img" src="babydriver.png" alt="image"></div>
+                            <div class="child"><img class = "child-img" src="banners/babydriver.png" alt="image"><h1>Baby Driver</h1></div>
+                            <div class="child"><img class = "child-img" src="banners/evangelion.jpg" alt="image"><h1>Neon Genesis Evangelion</h1></div>
+                            <div class="child"><img class = "child-img" src="banners/Akira.jpg" alt="image"><h1>Akira</h1></div>
+                            <div class="child"><img class = "child-img" src="banners/love_death_robotsjpg.jpg" alt="image"><h1>Love, Death & Robots</h1></div>
+                            <div class="child"><img class = "child-img" src="banners/wolfwalkers.jpg" alt="image"><h1>wolfwalkers</h1></div>
+                            <div class="child"><img class = "child-img" src="banners/Over_the_garden_wall.jpg" alt="image"><h1>Over The Garden Wall</h1></div>
                             <div class="child"><img class = "child-img" src="babydriver.png" alt="image"></div>
                             <div class="child"><img class = "child-img" src="babydriver.png" alt="image"></div>
                             <div class="child"><img class = "child-img" src="babydriver.png" alt="image"></div>
@@ -81,7 +84,104 @@
                         </div>
                     </div>
                     <div>
-                        <button class="icon" onclick="scrolll()"> <img class="icon-img" src="direita.svg"></i></button>
+                        <button class="icon" onclick="scrolll()"> <img class="icon-img" src="icons/direita.svg"></i></button>
+                    </div>
+                </div>
+            </cont>
+        </header>
+        <main></main>
+
+    </body>
+    </html> 
+
+
+    <!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <link rel="icon" href="icons/onion3.png">
+        <title>Fresh Onion</title>
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+        <header>
+            <nav>
+                </div>
+                <a class="logo" href="/">
+                    <img src="icons/onion3.png" alt="onion" height="50" width="50">
+                    <h1>Fresh Onion</h1>
+                </a>
+                <div class="search-box">
+                    <input type="text" class="search-txt" placeholder="pesquisar">
+                    <a href="#" class="search-btn">
+                        <img src="icons/loupe.svg" alt="Lupa" height="20" width="20">
+                    </a>
+                </div>
+                <div class="mobile-menu">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
+
+                <ul class="nav-list">
+                    <li><a href="/">Inicio</a></li>
+                    <li><a href="/"></a>Categorias</li>
+                    <li><a href="/"></a>Novos</li>
+                    <li><a href="/"></a>Ajuda</li>
+                </ul>
+                <div class="user">
+                    <img src="icons/account_circle.png" alt="user-icon" height="30" width="30">
+                    <h1>login/sigin</h1>
+                </div>
+            </nav>
+            <script src="mobile-navbar.js"></script>
+            <nav2>
+                <div class="sub-top-bar">
+
+                    <ul class="sub-bar">
+                        <li><a href="/"><img class = "sub-icons" src="icons/bug_report.png" alt="icons"></a></li>
+                        <li><a href="/"><img class = "sub-icons" src="icons/contact_mail.png" alt="icons"></a></li>
+                        <li><a href="/"><img class = "sub-icons" src="icons/photo_camera.png" alt="icons"></a></li>
+                    </ul>
+                </div>
+    
+                </nav2>
+
+            <cont>
+                <div class="lateral-bars">
+                    <div class="left"><h1></h1></div>
+                    <div class="right"><h1></h1></div>
+                </div>
+                <div class="titulo-scroll-bar">
+                    <h1>Top semanal</h1>
+                    <h2>Ver tudo</h2>
+                </div>
+                <div class="main-scroll-div">
+                    <div>
+                        <button class="icon" onclick="scrollr()"> <img class= "icon-img" src="icons/esquerda.svg"></i></button>
+                    </div>
+                    <div class = "cover">
+                        <div class ="scroll-images">
+                            <div class="child"><img class = "child-img" src="banners/babydriver.png" alt="image"><h1>Baby Driver</h1></div>
+                            <div class="child"><img class = "child-img" src="banners/evangelion.jpg" alt="image"><h1>Neon Genesis Evangelion</h1></div>
+                            <div class="child"><img class = "child-img" src="banners/Akira.jpg" alt="image"><h1>Akira</h1></div>
+                            <div class="child"><img class = "child-img" src="banners/love_death_robotsjpg.jpg" alt="image"><h1>Love, Death & Robots</h1></div>
+                            <div class="child"><img class = "child-img" src="banners/wolfwalkers.jpg" alt="image"><h1>wolfwalkers</h1></div>
+                            <div class="child"><img class = "child-img" src="banners/Over_the_garden_wall.jpg" alt="image"><h1>Over The Garden Wall</h1></div>
+                            <div class="child"><img class = "child-img" src="babydriver.png" alt="image"></div>
+                            <div class="child"><img class = "child-img" src="babydriver.png" alt="image"></div>
+                            <div class="child"><img class = "child-img" src="babydriver.png" alt="image"></div>
+                            <div class="child"><img class = "child-img" src="babydriver.png" alt="image"></div>
+                            <div class="child"><img class = "child-img" src="babydriver.png" alt="image"></div>
+                            <div class="child"><img class = "child-img" src="babydriver.png" alt="image"></div>
+                            <div class="child"><img class = "child-img" src="babydriver.png" alt="image"></div>
+                            <div class="child"><img class = "child-img" src="babydriver.png" alt="image"></div>
+                            <div class="child"><img class = "child-img" src="babydriver.png" alt="image"></div>
+                        </div>
+                    </div>
+                    <div>
+                        <button class="icon" onclick="scrolll()"> <img class="icon-img" src="icons/direita.svg"></i></button>
                     </div>
                 </div>
             </cont>
