--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                     <li><a href="/"></a>Novos</li>
                     <li><a href="/"></a>Ajuda</li>
                 </ul>
-                <div class="user">
-                    <img src="icons/account_circle.png" href="login.html" alt="user-icon" height="30" width="30">
+                <a class="user" href="login.html">
+                    <img src="icons/account_circle.png" alt="user-icon" height="30" width="30">
                     <h1>login/sigin</h1>
-                </div>
+                </a>
             </nav>
             <script src="mobile-navbar.js"></script>
             <nav2>
@@ -67,7 +67,7 @@
                     <div class = "cover">
                         <div class ="scroll-images">
                             <div class="child"><img class = "child-img" src="banners/babydriver.png" alt="image"><h1>Baby Driver</h1></div>
-                            <div class="child"><img class = "child-img" src="banners/evangelion.jpg" alt="image"><h1>Neon Genesis Evangelion</h1></div>
+                            <div class="child"><a class="link" href="filme.html"><img class = "child-img" src="banners/evangelion.jpg" alt="image"><h1>Neon Genesis Evangelion</h1></a></div>
                             <div class="child"><img class = "child-img" src="banners/Akira.jpg" alt="image"><h1>Akira</h1></div>
                             <div class="child"><img class = "child-img" src="banners/love_death_robotsjpg.jpg" alt="image"><h1>Love, Death & Robots</h1></div>
                             <div class="child"><img class = "child-img" src="banners/wolfwalkers.jpg" alt="image"><h1>wolfwalkers</h1></div>
