--- a/filme.html
+++ b/filme.html
@@ -5,19 +5,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Fresh Onion🧅</title>
         <link rel="stylesheet" href="style.css" />
+        <link rel="icon" href="icons/onion3.png">
     </head>
     <body>
         <header>
             <nav>
                 </div>
                 <a class="logo" href="/">
-                    <img src="onion3.png" alt="onion" height="50" width="50">
+                    <img src="icons/onion3.png" alt="onion" height="50" width="50">
                     <h1>Fresh Onion</h1>
                 </a>
                 <div class="search-box">
                     <input type="text" class="search-txt" placeholder="Pesquisar">
                     <a href="#" class="search-btn">
-                        <img src="loupe.svg" alt="Lupa" height="20" width="20">
+                        <img src="icons/loupe.svg" alt="Lupa" height="20" width="20">
                     </a>
                 </div>
                 <div class="mobile-menu">
