--- a/filme.html
+++ b/filme.html
@@ -11,7 +11,7 @@
         <header>
             <nav>
                 </div>
-                <a class="logo" href="/">
+                <a class="logo" href="index.html">
                     <img src="icons/onion3.png" alt="onion" height="50" width="50">
                     <h1>Fresh Onion</h1>
                 </a>
